data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1541.wast
;; 2. **Test Description**: Set up a loop with a `br_if` that conditionally breaks out based on a counter variable. Ensure the counter is properly checked against zero. The test should check proper unwinding of the operand stack when targeting loop labels.    - **Constraint Checked**: Operand stack unwinding and condition evaluation.    - **Relation to Infinite Loops**: Incorrect stack unwinding or condition check may cause the loop to continue infinitely without exiting.

(assert_invalid
  (module (func $loop-operand-unwinding
    (block $exit
      (loop $repeat
        (i32.const 10) ;; Counter initialization
        (br_if $exit 
          (i32.ne (i32.const 0) (i32.const 1)) ;; Conditional check causing an invalid type mismatch
        )
        br $repeat
      )
    )
  ))
  "type mismatch"
)